--- a/server-14.0-32bit/ChangeLog.txt
+++ b/server-14.0-32bit/ChangeLog.txt
@@ -1,3 +1,24 @@
+Tue Nov 12 15:17:33 CET 2013
+icecast-2.3.2-i486-3_microlinux.txz: Added.
+libmpdclient-2.7-i486-2_microlinux.txz: Added.
+ncmpc-0.16-i486-2_microlinux.txz: Added.
+libsigc++-2.2.10-i486-2_microlinux.txz: Added.
+libtorrent-0.13.0-i486-2_microlinux.txz: Added.
+rtorrent-0.9.0-i486-3_microlinux.txz: Added.
+squid-3.1.20-i486-2_microlinux.txz: Added.
+squidGuard-1.4-i486-2_microlinux.txz: Added.
+postfix-2.9.7-i486-2_microlinux.txz: Added.
+dovecot-2.1.17-i486-2_microlinux.txz: Added.
+pwgen-2.06-i486-2_microlinux.txz: Added.
+perl-IO-Multiplex-1.13-i486-2_microlinux.txz: Added.
+perl-digest-sha1-2.13-i486-2_microlinux.txz: Added.
+perl-digest-hmac-1.03-i486-2_microlinux.txz: Added.
+perl-net-ip-1.26-i486-2_microlinux.txz: Added.
+perl-net-dns-0.72-i486-2_microlinux.txz: Added.
+perl-Net-Server-2.007-i486-2_microlinux.txz: Added.
+perl-BerkeleyDB-0.52-i486-2_microlinux.txz: Added.
+postgrey-1.34-i486-3_microlinux.txz: Added.
++---------------------------+
 Tue Nov 12 07:28:06 CET 2013
 user-settings-console-1.0-noarch-3_microlinux.txz: Added.
 sbopkg-0.36.0-noarch-2_microlinux.txz: Added.
