--- a/desktop-base-14.0-32bit/ChangeLog.txt
+++ b/desktop-base-14.0-32bit/ChangeLog.txt
@@ -1,3 +1,7 @@
-Tue Nov 12 22:51:10 CET 2013
 user-settings-console-1.0-noarch-2_microlinux.txz: Added.
+slackware/sbopkg-0.36.0-noarch-2_microlinux.txz
+slackware/recode-3.6-i486-3_microlinux.txz
+slackware/cdlabelgen-4.3.0-noarch-2_microlinux.txz
+slackware/p7zip-9.20.1-i486-2_microlinux.txz
+slackware/unrar-4.0.7-i486-2_microlinux.txz
 +---------------------------+
