--- a/desktop-base-14.0-64bit/ChangeLog.txt
+++ b/desktop-base-14.0-64bit/ChangeLog.txt
@@ -1,3 +1,8 @@
-Tue Nov 12 22:50:56 CET 2013
+Wed Nov 13 15:03:23 CET 2013
 user-settings-console-1.0-noarch-2_microlinux.txz: Added.
+sbopkg-0.36.0-noarch-2_microlinux.txz: Added.
+recode-3.6-x86_64-3_microlinux.txz: Added.
+cdlabelgen-4.3.0-noarch-2_microlinux.txz: Added.
+p7zip-9.20.1-x86_64-2_microlinux.txz: Added.
+unrar-4.0.7-x86_64-2_microlinux.txz: Added.
 +---------------------------+
