--- a/desktop-base-14.0-32bit/ChangeLog.txt
+++ b/desktop-base-14.0-32bit/ChangeLog.txt
@@ -1,3 +1,20 @@
+acpica-20130725-i486-1_microlinux.txz: Added.
+gc-7.2d-i486-2_microlinux.txz: Added.
+lua-5.1.5-i486-2_microlinux.txz: Added.
+numpy-1.6.2-i486-2_microlinux.txz: Added.
+orc-0.4.16-i486-2_microlinux.txz: Added.
+jdk-7u45-i586-1_microlinux.txz: Added.
+scons-2.2.0-i486-2_microlinux.txz: Added.
+BeautifulSoup-3.2.0-i486-2_microlinux.txz: Added.
+cddb-py-1.4-i486-2_microlinux.txz: Added.
+enca-1.14-i486-2_microlinux.txz: Added.
+gsl-1.16-i486-1_microlinux.txz: Added.
+imlib2-1.4.5-i486-2_microlinux.txz: Added.
+libevent-2.0.21-i486-2_microlinux.txz: Added.
+libburn-1.3.0-i486-1_microlinux.txz: Added.
+libisofs-1.3.0-i486-1_microlinux.txz: Added.
+libisoburn-1.3.0-i486-1_microlinux.txz: Added.
++---------------------------+
 Wed Nov 13 15:03:23 CET 2013
 user-settings-console-1.0-noarch-2_microlinux.txz: Added.
 sbopkg-0.36.0-noarch-2_microlinux.txz: Added.
