--- a/desktop-base-14.0-32bit/ChangeLog.txt
+++ b/desktop-base-14.0-32bit/ChangeLog.txt
@@ -1,3 +1,4 @@
+Thu Nov 14 06:59:22 CET 2013
 acpica-20130725-i486-1_microlinux.txz: Added.
 gc-7.2d-i486-2_microlinux.txz: Added.
 lua-5.1.5-i486-2_microlinux.txz: Added.
