--- a/desktop-base-14.0-32bit/ChangeLog.txt
+++ b/desktop-base-14.0-32bit/ChangeLog.txt
@@ -1,3 +1,25 @@
+Thu Nov 14 09:31:28 CET 2013
+a52dec-0.7.4-i486-2_microlinux.txz: Added.
+celt-0.11.3-i486-2_microlinux.txz: Added.
+dirac-1.0.2-i486-2_microlinux.txz: Added.
+faad2-2.7-i486-2_microlinux.txz: Added.
+flash-player-plugin-11.2.202.310-i386-1_microlinux.txz: Added.
+pasture/flash-player-plugin-legacy-10.3.183.11-i386-1_microlinux.txz: Added.
+frei0r-1.3-i486-2_microlinux.txz: Added.
+gsm-1.0.13-i486-2_microlinux.txz: Added.
+gst-ffmpeg-0.10.13-i486-2_microlinux.txz: Added.
+lame-3.99.5-i486-2_microlinux.txz: Added.
+libavc1394-0.5.3-i486-3_microlinux.txz: Added.
+libaacs-0.6.0-i486-1_microlinux.txz: Added.
+libbluray-0.2.3-i486-2_microlinux.txz: Added.
+libcdaudio-0.99.12p2-i486-2_microlinux.txz: Added.
+libcuefile-r453-i486-2_microlinux.txz: Added.
+libdc1394-2.2.0-i486-2_microlinux.txz: Added.
+libdca-0.0.5-i486-2_microlinux.txz: Added.
+libdv-1.0.0-i486-2_microlinux.txz: Added.
+libdvdcss-1.2.11-i486-2_microlinux.txz: Added.
+libdvdnav-4.2.0-i486-2_microlinux.txz: Added.
++---------------------------+
 Thu Nov 14 06:59:22 CET 2013
 acpica-20130725-i486-1_microlinux.txz: Added.
 gc-7.2d-i486-2_microlinux.txz: Added.
