--- a/desktop-base-14.0-32bit/ChangeLog.txt
+++ b/desktop-base-14.0-32bit/ChangeLog.txt
@@ -1,3 +1,26 @@
+slackware/OpenAL-1.15.1-i486-1_microlinux.txz
+slackware/opencore-amr-0.1.2-i486-2_microlinux.txz
+slackware/openjpeg-1.5.1-i486-2_microlinux.txz
+slackware/rtmpdump-20120308_7340f6d-i486-2_microlinux.txz
+slackware/soundtouch-1.6.0-i486-2_microlinux.txz
+slackware/speex-1.2rc1-i486-2_microlinux.txz
+slackware/twolame-0.3.13-i486-2_microlinux.txz
+slackware/vcdimager-0.7.23-i486-2_microlinux.txz
+slackware/x264-20120804-i486-2_microlinux.txz
+slackware/xvidcore-1.3.2-i486-2_microlinux.txz
+slackware/faac-1.28-i486-3_microlinux.txz
+slackware/libass-0.10.1-i486-2_microlinux.txz
+slackware/libshout-2.2.2-i486-2_microlinux.txz
+slackware/schroedinger-1.0.11-i486-2_microlinux.txz
+slackware/ffmpeg-0.11.1-i486-3_microlinux.txz
+slackware/libquicktime-1.2.4-i486-2_microlinux.txz
+slackware/mlt-0.8.8-i486-2_microlinux.txz
+slackware/musepack-tools-r435-i486-2_microlinux.txz
+slackware/gst-plugins-bad-0.10.23-i486-2_microlinux.txz
+slackware/gst-plugins-ugly-0.10.19-i486-2_microlinux.txz
+slackware/libmpeg2-0.5.1-i486-2_microlinux.txz
+slackware/transcode-1.1.7-i486-2_microlinux.txz
++---------------------------+
 Fri Nov 15 07:33:43 CET 2013
 libiec61883-1.2.0-i486-3_microlinux.txz: Added.
 libkate-0.4.1-i486-2_microlinux.txz: Added.
