--- a/desktop-base-14.0-64bit/ChangeLog.txt
+++ b/desktop-base-14.0-64bit/ChangeLog.txt
@@ -1,3 +1,27 @@
+Sat Nov 16 10:14:16 CET 2013
+OpenAL-1.15.1-x86_64-1_microlinux.txz: Added.
+opencore-amr-0.1.2-x86_64-2_microlinux.txz: Added.
+openjpeg-1.5.1-x86_64-2_microlinux.txz: Added.
+rtmpdump-20120308_7340f6d-x86_64-2_microlinux.txz: Added.
+soundtouch-1.6.0-x86_64-2_microlinux.txz: Added.
+speex-1.2rc1-x86_64-2_microlinux.txz: Added.
+twolame-0.3.13-x86_64-2_microlinux.txz: Added.
+vcdimager-0.7.23-x86_64-2_microlinux.txz: Added.
+x264-20120804-x86_64-2_microlinux.txz: Added.
+xvidcore-1.3.2-x86_64-2_microlinux.txz: Added.
+faac-1.28-x86_64-3_microlinux.txz: Added.
+libass-0.10.1-x86_64-2_microlinux.txz: Added.
+libshout-2.2.2-x86_64-2_microlinux.txz: Added.
+schroedinger-1.0.11-x86_64-2_microlinux.txz: Added.
+ffmpeg-0.11.1-x86_64-3_microlinux.txz: Added.
+libquicktime-1.2.4-x86_64-2_microlinux.txz: Added.
+mlt-0.8.8-x86_64-2_microlinux.txz: Added.
+musepack-tools-r435-x86_64-2_microlinux.txz: Added.
+gst-plugins-bad-0.10.23-x86_64-2_microlinux.txz: Added.
+gst-plugins-ugly-0.10.19-x86_64-2_microlinux.txz: Added.
+libmpeg2-0.5.1-x86_64-2_microlinux.txz: Added.
+transcode-1.1.7-x86_64-2_microlinux.txz: Added.
++---------------------------+
 Fri Nov 15 07:46:42 CET 2013
 libiec61883-1.2.0-x86_64-3_microlinux.txz: Added.
 libkate-0.4.1-x86_64-2_microlinux.txz: Added.
