--- a/desktop-base-14.0-32bit/ChangeLog.txt
+++ b/desktop-base-14.0-32bit/ChangeLog.txt
@@ -1,3 +1,4 @@
+Sat Nov 16 10:22:28 CET 2013
 OpenAL-1.15.1-i486-1_microlinux.txz: Added.
 opencore-amr-0.1.2-i486-2_microlinux.txz: Added.
 openjpeg-1.5.1-i486-2_microlinux.txz: Added.
