--- a/desktop-base-14.0-32bit/ChangeLog.txt
+++ b/desktop-base-14.0-32bit/ChangeLog.txt
@@ -1,8 +1,9 @@
-slackware/google-droid-fonts-20100409-noarch-2_microlinux.txz
-slackware/webcore-fonts-3.0-noarch-4_microlinux.txz
-slackware/eurostile-fonts-1.0-noarch-2_microlinux.txz
-slackware/slack-wallpapers-0.212-noarch-2_microlinux.txz
-slackware/microlinux-wallpapers-1.0-noarch-2_microlinux.txz
+Sun Nov 17 06:45:58 CET 2013
+google-droid-fonts-20100409-noarch-2_microlinux.txz: Added.
+webcore-fonts-3.0-noarch-4_microlinux.txz: Added.
+eurostile-fonts-1.0-noarch-2_microlinux.txz: Added.
+slack-wallpapers-0.212-noarch-2_microlinux.txz: Added.
+microlinux-wallpapers-1.0-noarch-2_microlinux.txz: Added.
 +---------------------------+
 Sat Nov 16 10:22:28 CET 2013
 OpenAL-1.15.1-i486-1_microlinux.txz: Added.
