--- a/desktop-kde-14.0-32bit/ChangeLog.txt
+++ b/desktop-kde-14.0-32bit/ChangeLog.txt
@@ -17,4 +17,16 @@ kde-runtime-4.10.5-i486-2_microlinux.txz: Upgraded.
 kde-workspace-4.10.5-i486-3_microlinux.txz: Upgraded.
 kde-baseapps-4.10.5-i486-2_microlinux.txz: Upgraded.
 oxygen-icons-4.10.5-i486-2_microlinux.txz: Upgraded.
+kde-l10n-de-4.10.5-noarch-2_microlinux.txz: Upgraded.
+kde-l10n-fr-4.10.5-noarch-2_microlinux.txz: Upgraded.
+konsole-4.10.5-i486-2_microlinux.txz: Upgraded.
+oxygen-gtk2-1.3.4-i486-2_microlinux.txz: Upgraded.
+kde-base-artwork-4.10.5-i486-3_microlinux.txz: Added.
+okular-4.10.5-i486-2_microlinux.txz: Upgraded.
+libkexiv2-4.10.5-i486-2_microlinux.txz: Upgraded.
+libkipi-4.10.5-i486-2_microlinux.txz: Upgraded.
+gwenview-4.10.5-i486-2_microlinux.txz: Upgraded.
+pykde4-4.10.5-i486-2_microlinux.txz: Upgraded.
+kate-4.10.5-i486-2_microlinux.txz: Upgraded.
+ark-4.10.5-i486-2_microlinux.txz: Upgraded.
 +---------------------------+
