--- a/desktop-kde-14.0-64bit/ChangeLog.txt
+++ b/desktop-kde-14.0-64bit/ChangeLog.txt
@@ -1,3 +1,4 @@
+Mon Nov 18 18:08:42 CET 2013
 soprano-2.9.0-x86_64-2_microlinux.txz: Upgraded.
 akonadi-1.9.0-x86_64-2_microlinux.txz: Upgraded.
 attica-0.4.1-x86_64-2_microlinux.txz: Upgraded.
@@ -30,4 +31,16 @@ pykde4-4.10.5-x86_64-2_microlinux.txz: Upgraded.
 kate-4.10.5-x86_64-2_microlinux.txz: Upgraded.
 ark-4.10.5-x86_64-2_microlinux.txz: Upgraded.
 ksnapshot-4.10.5-x86_64-2_microlinux.txz: Upgraded.
+libkcddb-4.10.5-x86_64-2_microlinux.txz: Added.
+k3b-2.0.2-x86_64-2_microlinux.txz: Rebuilt.
+kde-wallpapers-4.10.5-x86_64-3_microlinux.txz: Upgraded.
+kdeartwork-4.10.5-x86_64-3_microlinux.txz: Upgraded.
+kamera-4.10.5-x86_64-2_microlinux.txz: Upgraded.
+kcalc-4.10.5-x86_64-2_microlinux.txz: Upgraded.
+oxygen-gtk3-1.1.4-x86_64-2_microlinux.txz: Added.
+kmix-4.10.5-x86_64-2_microlinux.txz: Added.
+print-manager-4.10.5-x86_64-2_microlinux.txz: Added.
+libksane-4.10.5-x86_64-2_microlinux.txz: Upgraded.
+ksaneplugin-4.10.5-x86_64-2_microlinux.txz: Upgraded.
+skanlite-1.0-x86_64-2_microlinux.txz: Upgraded.
 +---------------------------+
