--- a/desktop-base-14.0-64bit/ChangeLog.txt
+++ b/desktop-base-14.0-64bit/ChangeLog.txt
@@ -1,3 +1,9 @@
+Tue Nov 19 06:08:55 CET 2013
+libmusicbrainz3-3.0.3-x86_64-2_microlinux.txz: Added.
+openoffice-4.0.1_en_US-x86_64-2_microlinux.txz: Added.
+openoffice-langpack-de-4.0.1-x86_64-1_microlinux.txz: Added.
+openoffice-langpack-fr-4.0.1-x86_64-1_microlinux.txz: Added.
++---------------------------+
 Sun Nov 17 06:56:51 CET 2013
 google-droid-fonts-20100409-noarch-2_microlinux.txz: Added.
 webcore-fonts-3.0-noarch-4_microlinux.txz: Added.
