--- a/desktop-kde-14.0-32bit/ChangeLog.txt
+++ b/desktop-kde-14.0-32bit/ChangeLog.txt
@@ -1,3 +1,4 @@
+Tue Nov 19 08:38:45 CET 2013
 user-settings-kde-4.10.5-noarch-2_microlinux.txz: Added.
 kcharselect-4.10.5-i486-2_microlinux.txz: Upgraded.
 kcolorchooser-4.10.5-i486-2_microlinux.txz: Upgraded.
@@ -9,6 +10,9 @@ mplayerthumbs-4.10.5-i486-2_microlinux.txz: Added.
 svgpart-4.10.5-i486-2_microlinux.txz: Upgraded.
 ffmpegthumbs-4.10.5-i486-2_microlinux.txz: Added.
 networkmanagement-0.9.0.8-i486-2_microlinux.txz: Upgraded.
+kscd-4.10.5-i486-2_microlinux.txz: Added.
+libkcompactdisc-4.10.5-i486-2_microlinux.txz: Added.
+audiocd-kio-4.10.5-i486-2_microlinux.txz: Added.
 +---------------------------+
 Mon Nov 18 18:11:16 CET 2013
 soprano-2.9.0-i486-2_microlinux.txz: Upgraded.
