--- a/desktop-kde-14.0-64bit/ChangeLog.txt
+++ b/desktop-kde-14.0-64bit/ChangeLog.txt
@@ -1,4 +1,4 @@
-
+Tue Nov 19 08:53:53 CET 2013
 user-settings-kde-4.10.5-noarch-2_microlinux.txz: Added.
 kcharselect-4.10.5-x86_64-2_microlinux.txz: Upgraded.
 kcolorchooser-4.10.5-x86_64-2_microlinux.txz: Upgraded.
@@ -10,6 +10,9 @@ mplayerthumbs-4.10.5-x86_64-2_microlinux.txz: Added.
 svgpart-4.10.5-x86_64-2_microlinux.txz: Upgraded.
 ffmpegthumbs-4.10.5-x86_64-2_microlinux.txz: Added.
 networkmanagement-0.9.0.8-x86_64-2_microlinux.txz: Added.
+kscd-4.10.5-x86_64-2_microlinux.txz: Added.
+libkcompactdisc-4.10.5-x86_64-2_microlinux.txz: Added.
+audiocd-kio-4.10.5-x86_64-2_microlinux.txz: Added.
 +---------------------------+
 Mon Nov 18 18:08:42 CET 2013
 soprano-2.9.0-x86_64-2_microlinux.txz: Upgraded.
