--- a/desktop-base-14.0-32bit/ChangeLog.txt
+++ b/desktop-base-14.0-32bit/ChangeLog.txt
@@ -1,3 +1,4 @@
+Tue Nov 19 10:45:47 CET 2013
 mozilla-firefox-l10n-17.0.11-i486-1_microlinux.txz: Added.
 mozilla-thunderbird-l10n-17.0.10-i486-1_microlinux.txz: Added.
 MPlayer-1.1-i486-2_microlinux.txz: Rebuilt.
