--- a/desktop-mate-14.0-64bit/ChangeLog.txt
+++ b/desktop-mate-14.0-64bit/ChangeLog.txt
@@ -1,3 +1,7 @@
+Thu Nov 21 08:02:59 CET 2013
+gtk-engines-2.20.2-x86_64-3_microlinux.txz: Added.
+clearlooks-phenix-theme-2.0.10-noarch-2_microlinux.txz: Added.
++---------------------------+
 Wed Nov 20 11:30:40 CET 2013
 libgnomecanvas-2.30.3-x86_64-2_microlinux.txz: Added.
 gdm-2.20.11-x86_64-2_microlinux.txz: Added.
