--- a/desktop-base-14.0-32bit/ChangeLog.txt
+++ b/desktop-base-14.0-32bit/ChangeLog.txt
@@ -1,3 +1,10 @@
+Fri Nov 22 15:45:55 CET 2013
+transmission-2.77-i486-2_microlinux.txz: Added.
+cryptopp-5.6.1-i486-3_microlinux.txz: Added.
+aMule-2.3.1-i486-2_microlinux.txz: Added.
+jbig2dec-0.11-i486-2_microlinux.txz: Added.
+mupdf-1.2-i486-2_microlinux.txz: Added.
++---------------------------+
 Thu Nov 21 09:11:18 CET 2013
 wxGTK-2.8.12-i486-3_microlinux.txz: Added.
 audacity-2.0.3-i486-2_microlinux.txz: Added.
