--- a/desktop-xfce-14.0-64bit/ChangeLog.txt
+++ b/desktop-xfce-14.0-64bit/ChangeLog.txt
@@ -1,12 +1,12 @@
 Tue Nov 26 08:36:50 CET 2013
 aero-1.0-noarch-2_microlinux.txz: Added.
-gtk-engines-2.20.2-i486-3_microlinux.txz: Added.
+gtk-engines-2.20.2-x86_64-3_microlinux.txz: Added.
 clearlooks-phenix-theme-2.0.10-noarch-2_microlinux.txz: Added.
 faenza-icon-theme-1.3-noarch-3_microlinux.txz: Added.
-Terminal-0.6.1-i486-2_microlinux.txz: Upgraded.
-xarchiver-0.5.2-i486-4_microlinux.txz: Added.
-thunar-archive-plugin-0.3.0-i486-2_microlinux.txz: Added.
+Terminal-0.6.1-x86_64-2_microlinux.txz: Upgraded.
+xarchiver-0.5.2-x86_64-4_microlinux.txz: Added.
+thunar-archive-plugin-0.3.0-x86_64-2_microlinux.txz: Added.
 xfwm4-theme-axe-1.0-noarch-2_microlinux.txz: Added.
-xfce4-xkb-plugin-0.5.4.3-i486-2_microlinux.txz: Added.
+xfce4-xkb-plugin-0.5.4.3-x86_64-2_microlinux.txz: Added.
 user-settings-xfce-1.0-noarch-6_microlinux.txz: Added.
 +---------------------------+
