--- a/desktop-xfce-14.0-32bit/ChangeLog.txt
+++ b/desktop-xfce-14.0-32bit/ChangeLog.txt
@@ -2,6 +2,11 @@ Wed Nov 27 07:54:22 CET 2013
 user-settings-xfce-1.0-noarch-7_microlinux.txz: Rebuilt.
 libgnomecanvas-2.30.3-i486-2_microlinux.txz: Added.
 gdm-2.20.11-i486-2_microlinux.txz: Added.
+simple-scan-2.32.0.2-i486-2_microlinux.txz: Added.
+totem-pl-parser-2.32.5-i486-2_microlinux.txz: Added.
+brasero-3.4.1-i486-2_microlinux.txz: Added.
+dconf-0.12.1-i486-2_microlinux.txz: Added.
+evince-3.4.0-i486-2_microlinux.txz: Added.
 +---------------------------+
 Tue Nov 26 08:36:50 CET 2013
 aero-1.0-noarch-2_microlinux.txz: Added.
