--- a/desktop-xfce-14.0-32bit/ChangeLog.txt
+++ b/desktop-xfce-14.0-32bit/ChangeLog.txt
@@ -8,6 +8,14 @@ brasero-3.4.1-i486-2_microlinux.txz: Added.
 dconf-0.12.1-i486-2_microlinux.txz: Added.
 evince-3.4.0-i486-2_microlinux.txz: Added.
 gthumb-3.0.1-i486-1_microlinux.txz: Added.
+asunder-2.2-i486-2_microlinux.txz: Added.
+catfish-0.3.2-noarch-2_microlinux.txz: Added.
+galculator-1.3.4-i486-2_microlinux.txz: Added.
+gcolor2-0.4-i486-4_microlinux.txz: Added.
+libgnomecups-0.2.3-i486-2_microlinux.txz: Added.
+libgnomeprint-2.18.8-i486-2_microlinux.txz: Added.
+libgnomeprintui-2.18.6-i486-2_microlinux.txz: Added.
+leafpad-0.8.18.1-i486-2_microlinux.txz: Added.
 +---------------------------+
 Tue Nov 26 08:36:50 CET 2013
 aero-1.0-noarch-2_microlinux.txz: Added.
