--- a/desktop-xfce-14.0-64bit/ChangeLog.txt
+++ b/desktop-xfce-14.0-64bit/ChangeLog.txt
@@ -1,3 +1,7 @@
+Thu Nov 28 06:01:56 CET 2013
+user-settings-xfce-1.0-noarch-8_microlinux.txz: Rebuilt.
+  Fixed broken Open Office launchers.
++---------------------------+
 Wed Nov 27 08:42:43 CET 2013
 user-settings-xfce-1.0-noarch-7_microlinux.txz: Rebuilt.
 libgnomecanvas-2.30.3-x86_64-2_microlinux.txz: Added.
