--- a/desktop-mate-14.0-32bit/ChangeLog.txt
+++ b/desktop-mate-14.0-32bit/ChangeLog.txt
@@ -5,6 +5,8 @@ gthumb-3.0.1-i486-1_microlinux.txz: Added.
 simple-scan-2.32.0.2-i486-2_microlinux.txz: Added.
 asunder-2.2-i486-2_microlinux.txz: Added.
 gcolor2-0.4-i486-4_microlinux.txz: Added.
+gtk-engines-2.20.2-i486-3_microlinux.txz: Removed.
+  Already featured in MSB.
 +---------------------------+
 Thu Nov 21 07:36:08 CET 2013
 gtk-engines-2.20.2-i486-3_microlinux.txz: Added.
