--- a/desktop-mate-14.0-32bit/ChangeLog.txt
+++ b/desktop-mate-14.0-32bit/ChangeLog.txt
@@ -1,3 +1,6 @@
+Thu Nov 28 14:14:19 CET 2013
+user-settings-mate-1.0-noarch-1_microlinux.txz: Added.
++---------------------------+
 Thu Nov 28 06:25:52 CET 2013
 totem-pl-parser-2.32.5-i486-2_microlinux.txz: Added.
 brasero-3.4.1-i486-2_microlinux.txz: Added.
