--- a/desktop-base-14.1-32bit/ChangeLog.txt
+++ b/desktop-base-14.1-32bit/ChangeLog.txt
@@ -1,3 +1,20 @@
+
+libilbc-20131002-i486-1_microlinux.txz: Added.
+openjpeg-1.5.1-i486-1_microlinux.txz: Added.
+ladspa_sdk-1.13-i486-4_microlinux.txz: Added.
+libmodplug-0.8.8.4-i486-1_microlinux.txz: Added.
+OpenAL-1.15.1-i486-1_microlinux.txz: Added.
+opencore-amr-0.1.3-i486-1_microlinux.txz: Added.
+opus-1.0.3-i486-1_microlinux.txz: Added.
+rtmpdump-20131007_a9f353c-i486-1_microlinux.txz: Added.
+orc-0.4.18-i486-1_microlinux.txz: Added.
+schroedinger-1.0.11-i486-1_microlinux.txz: Added.
+speex-1.2rc1-i486-1_microlinux.txz: Added.
+twolame-0.3.13-i486-1_microlinux.txz: Added.
+libvpx-1.2.0-i486-1_microlinux.txz: Added.
+xvidcore-1.3.2-i486-1_microlinux.txz: Added.
+ffmpeg-2.1-i686_custom-1_microlinux.txz: Added.
++---------------------------+
 Sat Nov 30 12:20:58 CET 2013
 sbopkg-0.36.0-noarch-1_microlinux.txz: Added.
 recode-3.6-i486-1_microlinux.txz: Added.
