--- a/desktop-base-14.1-32bit/ChangeLog.txt
+++ b/desktop-base-14.1-32bit/ChangeLog.txt
@@ -1,4 +1,4 @@
-
+Sat Nov 30 19:56:17 CET 2013
 libilbc-20131002-i486-1_microlinux.txz: Added.
 openjpeg-1.5.1-i486-1_microlinux.txz: Added.
 ladspa_sdk-1.13-i486-4_microlinux.txz: Added.
