--- a/desktop-base-14.1-64bit/ChangeLog.txt
+++ b/desktop-base-14.1-64bit/ChangeLog.txt
@@ -1,3 +1,20 @@
+Sat Nov 30 20:12:56 CET 2013
+libilbc-20131002-x86_64-1_microlinux.txz: Added.
+openjpeg-1.5.1-x86_64-1_microlinux.txz: Added.
+ladspa_sdk-1.13-x86_64-4_microlinux.txz: Added.
+libmodplug-0.8.8.4-x86_64-1_microlinux.txz: Added.
+OpenAL-1.15.1-x86_64-1_microlinux.txz: Added.
+opencore-amr-0.1.3-x86_64-1_microlinux.txz: Added.
+opus-1.0.3-x86_64-1_microlinux.txz: Added.
+rtmpdump-20131007_a9f353c-x86_64-1_microlinux.txz: Added.
+orc-0.4.18-x86_64-1_microlinux.txz: Added.
+schroedinger-1.0.11-x86_64-1_microlinux.txz: Added.
+speex-1.2rc1-x86_64-1_microlinux.txz: Added.
+twolame-0.3.13-x86_64-1_microlinux.txz: Added.
+libvpx-1.2.0-x86_64-1_microlinux.txz: Added.
+xvidcore-1.3.2-x86_64-1_microlinux.txz: Added.
+ffmpeg-2.1-x86_64_custom-1_microlinux.txz: Added.
++---------------------------+
 Sat Nov 30 14:10:21 CET 2013
 sbopkg-0.36.0-noarch-1_microlinux.txz: Added.
 recode-3.6-x86_64-1_microlinux.txz: Added.
