--- a/desktop-base-14.1-32bit/ChangeLog.txt
+++ b/desktop-base-14.1-32bit/ChangeLog.txt
@@ -12,6 +12,7 @@ libreplaygain-r475-i486-1_microlinux.txz: Added.
 musepack-tools-r475-i486-1_microlinux.txz: Added.
 libdca-0.0.5-i486-1_microlinux.txz: Added.
 MPlayer-1.1.1-i486-1_microlinux.txz: Added.
+mplayer-codecs-20110131-i486-1_microlinux.txz: Added.
 +---------------------------+
 Sat Nov 30 19:56:17 CET 2013
 libilbc-20131002-i486-1_microlinux.txz: Added.
