--- a/desktop-base-14.1-32bit/ChangeLog.txt
+++ b/desktop-base-14.1-32bit/ChangeLog.txt
@@ -1,3 +1,9 @@
+Mon Dec  2 07:44:03 CET 2013
+audacious-3.4.2-i486-1_microlinux.txz: Rebuilt.
+libcue-1.3.0-i486-1_microlinux.txz: Added.
+libmms-0.6.2-i486-1_microlinux.txz: Added.
+audacious-plugins-3.4.2-i486-1_microlinux.txz: Rebuilt.
++---------------------------+
 Sun Dec  1 07:07:32 CET 2013
 a52dec-0.7.4-i486-1_microlinux.txz: Added.
 libdv-1.0.0-i486-1_microlinux.txz: Added.
