--- a/desktop-base-14.1-64bit/ChangeLog.txt
+++ b/desktop-base-14.1-64bit/ChangeLog.txt
@@ -1,3 +1,9 @@
+Mon Dec  2 08:04:45 CET 2013
+audacious-3.4.2-x86_64-1_microlinux.txz: Rebuilt.
+libcue-1.3.0-x86_64-1_microlinux.txz: Added.
+libmms-0.6.2-x86_64-1_microlinux.txz: Added.
+audacious-plugins-3.4.2-x86_64-1_microlinux.txz: Rebuilt.
++---------------------------+
 Sun Dec  1 09:41:33 CET 2013
 a52dec-0.7.4-x86_64-1_microlinux.txz: Added.
 libdv-1.0.0-x86_64-1_microlinux.txz: Added.
