--- a/desktop-base-14.1-32bit/ChangeLog.txt
+++ b/desktop-base-14.1-32bit/ChangeLog.txt
@@ -1,3 +1,10 @@
+Mon Dec  2 17:29:46 CET 2013
+libmusicbrainz-2.1.5-i486-1_microlinux.txz: Added.
+vcdimager-0.7.24-i486-1_microlinux.txz: Added.
+wxGTK-2.8.12-i486-1_microlinux.txz: Added.
+soundtouch-1.7.1-i486-1_microlinux.txz: Added.
+audacity-2.0.5-i486-1_microlinux.txz: Added.
++---------------------------+
 Mon Dec  2 07:44:03 CET 2013
 audacious-3.4.2-i486-1_microlinux.txz: Rebuilt.
 libcue-1.3.0-i486-1_microlinux.txz: Added.
