--- a/desktop-base-14.1-64bit/ChangeLog.txt
+++ b/desktop-base-14.1-64bit/ChangeLog.txt
@@ -1,3 +1,10 @@
+Mon Dec  2 18:12:57 CET 2013
+libmusicbrainz-2.1.5-x86_64-1_microlinux.txz: Added.
+vcdimager-0.7.24-x86_64-1_microlinux.txz: Added.
+wxGTK-2.8.12-x86_64-1_microlinux.txz: Added.
+soundtouch-1.7.1-x86_64-1_microlinux.txz: Added.
+audacity-2.0.5-x86_64-1_microlinux.txz: Added.
++---------------------------+
 Mon Dec  2 08:04:45 CET 2013
 audacious-3.4.2-x86_64-1_microlinux.txz: Rebuilt.
 libcue-1.3.0-x86_64-1_microlinux.txz: Added.
