--- a/desktop-base-14.1-64bit/ChangeLog.txt
+++ b/desktop-base-14.1-64bit/ChangeLog.txt
@@ -1,3 +1,6 @@
+Mon Dec  2 18:55:03 CET 2013
+libmusicbrainz3-3.0.3-x86_64-1_microlinux.txz: Added.
++---------------------------+
 Mon Dec  2 18:12:57 CET 2013
 libmusicbrainz-2.1.5-x86_64-1_microlinux.txz: Added.
 vcdimager-0.7.24-x86_64-1_microlinux.txz: Added.
