--- a/desktop-base-14.1-32bit/ChangeLog.txt
+++ b/desktop-base-14.1-32bit/ChangeLog.txt
@@ -1,3 +1,28 @@
+Tue Dec  3 10:13:19 CET 2013
+scons-2.3.0-i486-1_microlinux.txz: Added.
+imlib2-1.4.5-i486-1_microlinux.txz: Added.
+lua-5.1.5-i486-1_microlinux.txz: Added.
+tolua++-1.0.93-i486-1_microlinux.txz: Added.
+conky-1.9.0-i486-1_microlinux.txz: Added.
+smplayer-0.8.6-i486-1_microlinux.txz: Added.
+libsigc++-2.2.11-i486-1_microlinux.txz: Added.
+glibmm-2.36.2-i486-1_microlinux.txz: Added.
+cairomm-1.10.0-i486-1_microlinux.txz: Added.
+pangomm-2.34.0-i486-1_microlinux.txz: Added.
+atkmm-2.22.7-i486-1_microlinux.txz: Added.
+mm-common-0.9.6-noarch-1_microlinux.txz: Added.
+gtkmm-2.24.4-i486-1_microlinux.txz: Added.
+BeautifulSoup-3.2.1-i486-1_microlinux.txz: Added.
+lxml-3.2.4-i486-1_microlinux.txz: Added.
+gsl-1.16-i486-1_microlinux.txz: Added.
+numpy-1.8.0-i486-1_microlinux.txz: Added.
+inkscape-0.48.4-i486-1_microlinux.txz: Added.
+mlt-0.9.0-i486-1_microlinux.txz: Added.
+pyxdg-0.25-i486-1_microlinux.txz: Added.
+goocanvas-0.15-i486-1_microlinux.txz: Added.
+pygoocanvas-0.14.1-i486-1_microlinux.txz: Added.
+openshot-1.4.3-i486-1_microlinux.txz: Added.
++---------------------------+
 Mon Dec  2 18:52:44 CET 2013
 libmusicbrainz3-3.0.3-i486-1_microlinux.txz: Added.
 +---------------------------+
