--- a/desktop-base-14.1-64bit/ChangeLog.txt
+++ b/desktop-base-14.1-64bit/ChangeLog.txt
@@ -1,3 +1,6 @@
+Wed Dec  4 09:57:03 CET 2013
+transmission-2.77-x86_64-2_microlinux.txz: Added.
++---------------------------+
 Tue Dec  3 16:02:06 CET 2013
 gtkmm3-3.8.1-x86_64-1_microlinux.txz: Added.
 gnote-3.10.1-x86_64-1_microlinux.txz: Added.
