--- a/desktop-base-14.1-64bit/ChangeLog.txt
+++ b/desktop-base-14.1-64bit/ChangeLog.txt
@@ -1,3 +1,9 @@
+Thu Dec  5 08:25:42 CET 2013
+acpica-20130725-x86_64-1_microlinux.txz: Added.
+virtualbox-4.2.18-x86_64-1_microlinux.txz: Added.
+virtualbox-kernel-4.2.18_3.10.17-x86_64-1_microlinux.txz: Added.
+virtualbox-extension-pack-4.2.18-x86_64-1_microlinux.txz: Added.
++---------------------------+
 Wed Dec  4 09:57:03 CET 2013
 transmission-2.77-x86_64-2_microlinux.txz: Added.
 +---------------------------+
