--- a/desktop-base-14.1-32bit/ChangeLog.txt
+++ b/desktop-base-14.1-32bit/ChangeLog.txt
@@ -1,3 +1,9 @@
+Thu Dec  5 09:01:23 CET 2013
+acpica-20130725-i486-1_microlinux.txz: Added.
+virtualbox-4.2.18-i486-1_microlinux.txz: Added.
+virtualbox-kernel-4.2.18_3.10.17_smp-i486-1_microlinux.txz: Added.
+virtualbox-extension-pack-4.2.18-i486-1_microlinux.txz: Added.
++---------------------------+
 Wed Dec  4 07:53:45 CET 2013
 transmission-2.77-i486-2_microlinux.txz: Added.
 +---------------------------+
