--- a/desktop-base-14.1-32bit/ChangeLog.txt
+++ b/desktop-base-14.1-32bit/ChangeLog.txt
@@ -1,3 +1,7 @@
+Thu Dec  5 16:41:34 CET 2013
+jbig2dec-0.11-i486-1_microlinux.txz: Added.
+mupdf-1.2-i486-1_microlinux.txz: Added.
++---------------------------+
 Thu Dec  5 09:01:23 CET 2013
 acpica-20130725-i486-1_microlinux.txz: Added.
 virtualbox-4.2.18-i486-1_microlinux.txz: Added.
