--- a/desktop-base-14.1-32bit/ChangeLog.txt
+++ b/desktop-base-14.1-32bit/ChangeLog.txt
@@ -1,3 +1,6 @@
+Tue Dec 17 08:18:15 CET 2013
+sbopkg-0.37.0-noarch-1_microlinux.txz: Upgraded.
++---------------------------+
 Thu Dec  5 16:41:34 CET 2013
 jbig2dec-0.11-i486-1_microlinux.txz: Added.
 mupdf-1.2-i486-1_microlinux.txz: Added.
