--- a/desktop-base-14.1-64bit/ChangeLog.txt
+++ b/desktop-base-14.1-64bit/ChangeLog.txt
@@ -1,3 +1,6 @@
+Tue Dec 17 08:21:18 CET 2013
+sbopkg-0.37.0-noarch-1_microlinux.txz: Upgraded.
++---------------------------+
 Thu Dec  5 16:46:00 CET 2013
 jbig2dec-0.11-x86_64-1_microlinux.txz: Added.
 mupdf-1.2-x86_64-1_microlinux.txz: Added.
