--- a/desktop-xfce-14.1-64bit/ChangeLog.txt
+++ b/desktop-xfce-14.1-64bit/ChangeLog.txt
@@ -1,3 +1,14 @@
+Thu Dec 19 08:45:19 CET 2013
+libunique-1.1.6-x86_64-1_microlinux.txz: Added.
+gst-ffmpeg-0.10.13-x86_64-1_microlinux.txz: Added.
+gst-plugins-bad-0.10.23-x86_64-1_microlinux.txz: Added.
+gst-plugins-ugly-0.10.19-x86_64-1_microlinux.txz: Added.
+totem-pl-parser-3.4.5-x86_64-1_microlinux.txz: Added.
+libburn-1.3.4-x86_64-1_microlinux.txz: Added.
+libisofs-1.3.4-x86_64-1_microlinux.txz: Added.
+libisoburn-1.3.4-x86_64-1_microlinux.txz: Added.
+brasero-2.32.1-x86_64-1_microlinux.txz: Added.
++---------------------------+
 Thu Dec 19 06:42:34 CET 2013
 gtk-engines-2.20.2-x86_64-1_microlinux.txz: Added.
 clearlooks-phenix-theme-20131129-noarch-1_microlinux.txz: Added.
