--- a/MLED-14.0-32bit/ChangeLog.txt
+++ b/MLED-14.0-32bit/ChangeLog.txt
@@ -1,10 +1,22 @@
+Tue Dec 24 15:24:04 CET 2013
+xfce/aero-1.0-noarch-2_microlinux.txz: Added.
+l/gtk-engines-2.20.2-i486-3_microlinux.txz: Added.
+xfce/clearlooks-phenix-theme-2.0.10-noarch-2_microlinux.txz: Added.
+xfce/faenza-icon-theme-1.3-noarch-3_microlinux.txz: Added.
+xfce/Terminal-0.6.1-i486-2_microlinux.txz: Added.
+xfce/xarchiver-0.5.2-i486-4_microlinux.txz: Added.
+xfce/thunar-archive-plugin-0.3.0-i486-2_microlinux.txz: Added.
+xfce/xfwm4-theme-axe-1.0-noarch-2_microlinux.txz: Added.
+xfce/xfce4-xkb-plugin-0.5.4.3-i486-2_microlinux.txz: Added.
+xfce/user-settings-xfce-1.0-noarch-8_microlinux.txz: Added.
++---------------------------+
 Tue Dec 24 13:02:02 CET 2013
 x/google-droid-fonts-20100409-noarch-2_microlinux.txz: Added.
 x/webcore-fonts-3.0-noarch-4_microlinux.txz: Added.
 x/eurostile-fonts-1.0-noarch-2_microlinux.txz: Added.
 xfce/slack-wallpapers-0.212-noarch-3_microlinux.txz: Added.
 xfce/microlinux-wallpapers-1.0-noarch-3_microlinux.txz: Added.
-l/libmusicbrainz-2.1.5-i486-2_microlinux.txz: Added.
+l/libmusicbrainz3-3.0.3-i486-2_microlinux.txz: Added.
 xap/openoffice-4.0.1_en_US-i586-2_microlinux.txz: Added.
 xap/openoffice-langpack-fr-4.0.1-i486-1_microlinux.txz: Added.
 xap/openoffice-langpack-de-4.0.1-i486-1_microlinux.txz: Added.
