--- a/MLES-14.0-32bit/ChangeLog.txt
+++ b/MLES-14.0-32bit/ChangeLog.txt
@@ -1,3 +1,6 @@
+Tue Mar  4 13:14:19 CET 2014
+ap/glances-1.7.4-i486-1_microlinux.txz: Upgraded.
++--------------------------+
 Tue Mar  4 11:48:58 CET 2014
 l/pysetuptools-2.1-i486-1_microlinux.txz: Added.
 l/psutil-1.2.1-i486-1_microlinux.txz: Added.
