--- a/MLES-14.0-64bit/ChangeLog.txt
+++ b/MLES-14.0-64bit/ChangeLog.txt
@@ -1,3 +1,6 @@
+Tue Mar  4 13:18:39 CET 2014
+ap/glances-1.7.4-x86_64-1_microlinux.txz: Upgraded.
++--------------------------+
 Tue Mar  4 11:51:50 CET 2014
 l/pysetuptools-2.1-x86_64-1_microlinux.txz: Added.
 l/psutil-1.2.1-x86_64-1_microlinux.txz: Added.
